--- a/IWA6/book-connect-main/index.html
+++ b/IWA6/book-connect-main/index.html
@@ -31,14 +31,11 @@
     
   </head>
   <body>
-     <book-preview>
-        data-author="authorId"
-        data-id="bookId"
-        data-image="bookImage.jpg"
-        data-title="Book Title"
-    </book-preview>
-
-
+    <book-preview
+  image="path-to-image.jpg"
+  title="Book Title"
+  author="Author Name"
+></book-preview>
 
 
     <header class="header">
